objects/L2I_Support_Request_Queue_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom Setting to specify Support Request Queue Ids so they can be used in Flows etc.</description>
    <fields>
        <fullName>Advertising_Team_SR_Queue__c</fullName>
        <label>Advertising Team SR Queue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connectivity_Team_SR_Queue__c</fullName>
        <label>Connectivity Team SR Queue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Engineering_SR_Queue__c</fullName>
        <label>Customer Engineering SR Queue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Support_Team_SR_Queue__c</fullName>
        <label>Other Support Team SR Queue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTS_Team_SR_Queue__c</fullName>
        <label>PTS Team SR Queue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Support_Team_SR_Queue__c</fullName>
        <label>Revenue Support Team SR Queue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Operations_Team_SR_Queue__c</fullName>
        <description>This Custom field is used to Reference Sales Operation Team in Process Builder</description>
        <label>Sales Operations Team SR Queue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Lead_Time_SR_Queue__c</fullName>
        <label>Short Lead Time SR Queue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Support Request Queue Settings</label>
</CustomObject>